@@ -23,6 +23,7 @@
 
 #include "RemoveSimpleChanges.h"
 #include "RemoveDeletedBranches.h"
+#include "RemoveTags.h"
 #include "FoldTags.h"
 #include "RemoveUnchangedBranches.h"
 #include "ShowHeads.h"
@@ -84,6 +85,10 @@ CAllRevisionGraphOptions::CAllRevisionGraphOptions (const CGraphNodeStates* node
 
     (new CStandardNodeSizeAssignment (*this, nodeStates))->ToggleSelection();
     new CStrictOrderNodePositioning (*this, standardNodePositioning, reduceCrossLines);
+
+    // new options (we have to add them there as the order is to be preserved)
+
+    new CRemoveTags (*this);
 
     // link options as necessary
 
