@@ -76,6 +76,7 @@
        of the original icon. (Lazare Inepologlou)
 - NEW: Revision graph: Show range of last committed and range 
        of current revisions in working copy (Stefan Fuhrmann)
+- NEW: Revision graph: Add option to hide tags (Stefan Fuhrmann)
 - NEW: TortoiseUDiff accepts input from a pipe. It can be used now
        like this:
        $ svn diff | TortoiseUDiff.exe -p
